--- a/models/reporting/blended.yml
+++ b/models/reporting/blended.yml
@@ -1,1 +1,9 @@
 version: 2
+
+sources:
+
+- name: facebook_raw
+  schema: facebook_raw
+  tables:
+    - name: ads_insights_actions
+      identifier: ads_insights_actions
