--- a/models/reporting/blended.yml
+++ b/models/reporting/blended.yml
@@ -9,3 +9,7 @@ sources:
       identifier: ads_insights_actions
     - name: campaigns_insights_actions
       identifier: campaigns_insights_actions
+    - name: ads_insights_conversions
+      identifier: ads_insights_conversions
+    - name: campaigns_insights_conversions
+      identifier: campaigns_insights_conversions
