--- a/models/reporting/blended.yml
+++ b/models/reporting/blended.yml
@@ -15,3 +15,5 @@ sources:
       identifier: ads_insights_conversion_values
     - name: campaigns_insights_conversions
       identifier: campaigns_insights_conversions
+    - name: campaigns_insights_conversion_values
+      identifier: campaigns_insights_conversion_values
