--- a/packages.yml
+++ b/packages.yml
@@ -3,7 +3,7 @@ packages:
     revision: main
     
   - git: "https://github.com/superbolt-x/bolt-dbt-facebook-package.git"
-    revision: xyz
+    revision: main
 
   - git: "https://github.com/superbolt-x/bolt-dbt-googleads-package.git"
     revision: main
